# distributed-transactions

./: README.md  main.py  pyproject.toml
infrastructure/: docker-compose.yaml
services/coordinator/: Dockerfile  pyproject.toml
services/coordinator/src/coordinator/: __init__.py  app.py  config.py  main.py
services/coordinator/src/coordinator/api/: __init__.py  health.py
services/coordinator/src/coordinator/models/: transaction.py
services/coordinator/src/coordinator/schemas/: health.py
services/gateway/: pyproject.toml
services/gateway/src/gateway/: __init__.py
services/inventory/: Dockerfile  pyproject.toml
services/inventory/src/inventory/: __init__.py  app.py  config.py  main.py
services/inventory/src/inventory/api/: __init__.py  health.py
services/inventory/src/inventory/schemas/: health.py
services/notification/: pyproject.toml
services/notification/src/notification/: __init__.py
services/payment/: pyproject.toml
services/payment/src/payment/: __init__.py
services/shipping/: pyproject.toml
services/shipping/src/shipping/: __init__.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  enums.py
shared/src/shared/database/: __init__.py  base.py  session.py
shared/src/shared/database/mixins/: timestamp.py
shared/src/shared/logging/: logger.py
shared/src/shared/schemas/: commit.py  common.py  prepare.py  rollback.py  transaction.py
