[project]
name = "distributed-transactions"
version = "0.1.0"
description = "Production-inspired distributed transaction platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "shared",
    "services/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "mypy>=1.16.0",
]