[project]
name = "inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saineeth Togrikar", email = "tsaineeth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
inventory = "inventory:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
